[package]
name = "dactie-archive"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
tokio = { version = "1.38", default-features = false , features = ["full"]}
libp2p = { git = "https://github.com/libp2p/rust-libp2p",rev = "32e917f", features = ["serde", "json", "request-response","tokio", "gossipsub", "noise", "macros", "tcp", "yamux", "quic","kad","dns", "identify","rsa","mdns", "ecdsa"] }
env_logger = "0.11.3"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.22"
thiserror = "1.0.61"
async-trait = "0.1.81"
bincode = "1.3.3"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "rust_decimal"] }
dactie-utils = {path = "../dactie-utils" }
hex = "0.4.3"