[package]
name = "dactie-authority"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", default-features = false , features = ["full"]}
async-trait = "0.1"
futures = "0.3.30"
libp2p = { git = "https://github.com/libp2p/rust-libp2p",rev = "32e917f", features = ["serde", "json", "request-response","tokio", "gossipsub", "noise", "macros", "tcp", "yamux", "quic","kad","dns", "identify","rsa","mdns", "ecdsa"] }
thiserror = "1.0.61"
log = "0.4.21"
clap = { version = "4.5.6", features = ["derive"] }
openmls = { git = "https://github.com/openmls/openmls.git", rev = "9c45bdd" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
env_logger = "0.11.3"
anyhow = "1.0.86"
dactie-utils = {path = "../dactie-utils" }
thressig = { path = "../thressig"}
serde_json = "1.0.120"
hex = "0.4.3"
serde_with = "3.14.0"


