[package]
name = "dactie-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { git = "https://github.com/libp2p/rust-libp2p",rev = "32e917f", features = ["serde", "json", "request-response","tokio", "gossipsub", "noise", "macros", "tcp", "yamux", "quic","kad","dns", "identify","rsa","mdns", "ecdsa"] }
thressig = { path = "../thressig" }
serde = { version = "1.0", features = ["derive"] }
openmls = { git = "https://github.com/openmls/openmls.git", rev = "9c45bdd" }
openmls_basic_credential = { git = "https://github.com/openmls/openmls.git", rev = "9c45bdd", features = ["test-utils","clonable"]}
log = "0.4.21"
serde_json = "1.0.118"
thiserror = "1.0.62"
aes-gcm = "0.10.3"
aead = "0.5.2"
tokio = "1.38.0"
bincode = "1.3.3"
hex = "0.4.3"
openmls_traits = { git = "https://github.com/openmls/openmls.git", rev = "9c45bdd" }
openmls_rust_crypto = { git = "https://github.com/openmls/openmls.git", rev = "9c45bdd" }

[dependencies.openmls_memory_storage]
git = "https://github.com/openmls/openmls.git"
version = "*"
rev = "9c45bdd"
features = ["persistence"]

