[package]
name = "thressig"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
thiserror = "1.0.62"
sha2 = "0.11.0-pre.5"
base64 = "0.22.1"
[dependencies.amcl_wrapper]
version = "0.4.0"
default-features = false
features = ["bls381"]

